Fix autosuggest dropdown z-index
Fix autosuggest dropdown z-index to be above most of the other z positioned elements, mobile and other device sizes

--- a/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/_header.scss
+++ b/src/Orckestra.Composer.Website/UI.Package/Sass/Custom/_header.scss
@@ -33,7 +33,7 @@
 
 .masthead {
     position: relative;
-    z-index: 1030;
+    z-index: 1099;
     top: 0;
     transition: top .5s ease-in-out;
 
